# Openwakeword.Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: async_audio_buffer.cpp  async_audio_buffer.hpp  openwakeword.cpp  openwakeword.hpp
